tests/baselines/reference/extendsUntypedModule.types
=== /a.ts ===
import Foo from "foo";
>Foo : 任意
>类型别名 :=> 任意

import Bar from "bar"; // error: unused
>Bar : 任意
>类型别名 :=> 任意

export class A extends Foo { }
>A : A
>Foo : 任意
>类型别名 :=> 任意

